test links to slides and video

--- a/DSB2021/DSB2021.md
+++ b/DSB2021/DSB2021.md
@@ -21,92 +21,86 @@ To participate you need to register (step 1/2) and potentially, to submit an abs
 please contact Yuri Pirola (yuri.pirola@unimib.it) as soon as possible.
 
 ### 2/2: Submit an abstract
-If you wish to present a talk, submit your abstract via [EasyChair](https://easychair.org/conferences/?conf=dsb2021)
 
 As previously, there is no formal review, and the organizers reserve the  right to select talks from the submissions to obtain a diverse and  interesting program.
 
-## Slides
-
-Link to all provided slides will be provided soon.
-
 ## Program
 
-The workshop will be live streamed on YouTube:
+The workshop has been live streamed on YouTube. You can find the links to the individual talks in the program.
 
-* [Feb 11, first session (13:00-15:00)](https://youtu.be/vjUflAUxh3Q)
-* [Feb 11, second session (15:30-18:00)](https://youtu.be/NYSVsQK_Ksk)
-* [Feb 12, first session (13:00-15:00)](https://www.youtube.com/watch?v=NJ7p0uVCxJo)
-* [Feb 12, second session (15:30-18:00)](https://youtu.be/ER0ls_Z-1RY)
-
-
+* Feb 11, first session (13:00-15:00)
+* Feb 11, second session (15:30-18:00)
+* Feb 12, first session (13:00-15:00)
+* Feb 12, second session (15:30-18:00)
 ### February 11
 
 **13:00**
-Opening  
+Opening
 **13:25**
 Massimo Cairo, Shahbaz Khan, Romeo Rizzi, Sebastian Schmidt, Alexandru Tomescu and Elia Zirondelli
-*Genome assembly, a universal theoretical framework: unifying and generalizing the safe and complete algorithms*  
+*Genome assembly, a universal theoretical framework: unifying and generalizing the safe and complete algorithms*
 **13:50**
 Sung Gwan Park, Bastien Cazaux, Kunsoo Park and Eric Rivals
-*Efficient Construction of Hierarchical Overlap Graphs*  
+*Efficient Construction of Hierarchical Overlap Graphs*
 **14:15**
 Manuel Cáceres, Brendan Mumey, Edin Husic, Romeo Rizzi, Massimo Cairo, Kristoffer Sahlin and Alexandru Tomescu
-*Safety in multi-assembly via paths appearing in all path covers of a DAG*  
+*Safety in multi-assembly via paths appearing in all path covers of a DAG*
 **14:40**
-Break  
+Break
 **15:30**
 Roland Wittler, Andreas Rempel and Marco Sohn
-*SANS serif: alignment-free, whole-genome based phylogenetic reconstruction*  
+*SANS serif: alignment-free, whole-genome based phylogenetic reconstruction*
 **15:55**
 Lucas Robidou and Pierre Peterlongo
-*On the fly detection of Bloom filter false positives and application indexing k-mers with their abundances*  
+*On the fly detection of Bloom filter false positives and application indexing k-mers with their abundances*
 **16:20**
 Parsoa Khorsand, Luca Denti, Paola Bonizzoni, Rayan Chikhi and Fereydoun Hormozdiari
-*Comparative genome analysis using sample-specific string detection in accurate long reads*  
+*Comparative genome analysis using sample-specific string detection in accurate long reads*
 **16:45**
 Tizian Schulz, Roland Wittler and Jens Stoye
-*Sequence-Based Pangenomic Core Detection*  
+*Sequence-Based Pangenomic Core Detection*
 **17:10**
 Andreas Rempel
-*Developing a standard interface for sets of k-mer sets index structures*  
+*Developing a standard interface for sets of k-mer sets index structures*
 **17:35**
 Jamshed Khan and Robert Patro
-*Cuttlefish: Fast, parallel, and low-memory compaction of de Bruijn graphs from large-scale genome collections*  
+*Cuttlefish: Fast, parallel, and low-memory compaction of de Bruijn graphs from large-scale genome collections*
 
 ### February 12
 
 **13:00**
 Christina Boucher, Travis Gagie, Tomohiro I, Dominik Köppl, Ben Langmead, Giovanni Manzini, Gonzalo Navarro, Alejandro Pacheco and Massimiliano Rossi
-*PHONI: Streamed Matching Statistics with Multi-Genome References*  
+*PHONI: Streamed Matching Statistics with Multi-Genome References*
 **13:25**
 Karel Břinda, Simone Pignotti, Kamil Salikhov, Rayan Chikhi, Zamin Iqbal, Gregory Kucherov and Michael Baym
-*All microbes on a flashdrive*  
+*All microbes on a flashdrive*
+[slides]({{ site.baseurl }}{% link DSB2021/slides/slides-brinda.pptx %}) [video](https://youtu.be/iVhAOuYHH-M)
 **13:50**
 Yoshihiro Shibuya, Djamal Belazzougui and Gregory Kucherov
-*Succinct k-mer tables in practice*  
+*Succinct k-mer tables in practice*
 **14:15**
 Téo Lemane, Paul Medvedev, Rayan Chikhi and Pierre Peterlongo
-*kmtricks: Efficient construction of Bloom filters for large sequencing data collections*  
+*kmtricks: Efficient construction of Bloom filters for large sequencing data collections*
 **14:40**
-Break  
+Break
 **15:30**
 Till Hartmann, Elias Kuthe, Alicia Tüns, Alexander Schramm, Jens Zentgraf and Sven Rahmann
-*Alignment-free detection of copy number variants using strongly unique k-mers and fused lasso regularization*  
+*Alignment-free detection of copy number variants using strongly unique k-mers and fused lasso regularization*
 **15:55**
 Antonio Blanca, Robert S. Harris, David Koslicki and Paul Medvedev
-*The statistics of k-mers from a sequence undergoing a simple mutation process without spurious matches*  
+*The statistics of k-mers from a sequence undergoing a simple mutation process without spurious matches*
 **16:20**
 Travis Gagie
-*r-indexing Wheeler graphs*  
+*r-indexing Wheeler graphs*
 **16:45**
 Nicola Cotumaccio and Nicola Prezza
-*Indexing and compression: from Wheeler graphs to arbitrary graphs*  
+*Indexing and compression: from Wheeler graphs to arbitrary graphs*
 **17:10**
 Travis Gagie, Garance Gourdel and Giovanni Manzini
-*XBWTing Readsets*  
+*XBWTing Readsets*
 **17:35**
 Christina Boucher, Ondrej Cvacho, Travis Gagie, Jan Holub, Giovanni Manzini, Gonzalo Navarro and Massimiliano Rossi
-*PFP Compressed Suffix Trees*  
+*PFP Compressed Suffix Trees*
 **18:00**
 Conclusion
 
