links to slides and videos

--- a/DSB2021/DSB2021.md
+++ b/DSB2021/DSB2021.md
@@ -34,75 +34,93 @@ The workshop has been live streamed on YouTube. You can find the links to the in
 * Feb 12, second session (15:30-18:00)
 ### February 11
 
-**13:00**
-Opening
-**13:25**
-Massimo Cairo, Shahbaz Khan, Romeo Rizzi, Sebastian Schmidt, Alexandru Tomescu and Elia Zirondelli
-*Genome assembly, a universal theoretical framework: unifying and generalizing the safe and complete algorithms*
-**13:50**
-Sung Gwan Park, Bastien Cazaux, Kunsoo Park and Eric Rivals
-*Efficient Construction of Hierarchical Overlap Graphs*
-**14:15**
-Manuel Cáceres, Brendan Mumey, Edin Husic, Romeo Rizzi, Massimo Cairo, Kristoffer Sahlin and Alexandru Tomescu
-*Safety in multi-assembly via paths appearing in all path covers of a DAG*
-**14:40**
-Break
-**15:30**
-Roland Wittler, Andreas Rempel and Marco Sohn
-*SANS serif: alignment-free, whole-genome based phylogenetic reconstruction*
-**15:55**
-Lucas Robidou and Pierre Peterlongo
-*On the fly detection of Bloom filter false positives and application indexing k-mers with their abundances*
-**16:20**
-Parsoa Khorsand, Luca Denti, Paola Bonizzoni, Rayan Chikhi and Fereydoun Hormozdiari
-*Comparative genome analysis using sample-specific string detection in accurate long reads*
-**16:45**
-Tizian Schulz, Roland Wittler and Jens Stoye
-*Sequence-Based Pangenomic Core Detection*
-**17:10**
-Andreas Rempel
-*Developing a standard interface for sets of k-mer sets index structures*
-**17:35**
-Jamshed Khan and Robert Patro
-*Cuttlefish: Fast, parallel, and low-memory compaction of de Bruijn graphs from large-scale genome collections*
-
+**13:00**\
+Opening\
+**13:25**\
+Massimo Cairo, Shahbaz Khan, Romeo Rizzi, Sebastian Schmidt, Alexandru Tomescu and Elia Zirondelli\
+*Genome assembly, a universal theoretical framework: unifying and generalizing the safe and complete algorithms*\
+[slides]({{ site.baseurl }}{% link DSB2021/slides/slides-schmidt.pdf %}) [video](https://youtu.be/tLvK9G8Q3MQ)\
+**13:50**\
+Sung Gwan Park, Bastien Cazaux, Kunsoo Park and Eric Rivals\
+*Efficient Construction of Hierarchical Overlap Graphs*\
+[slides]({{ site.baseurl }}{% link DSB2021/slides/slides-caceres.pdf %}) [video](https://youtu.be/s2CJFPKDtnE)\
+**14:15**\
+Manuel Cáceres, Brendan Mumey, Edin Husic, Romeo Rizzi, Massimo Cairo, Kristoffer Sahlin and Alexandru Tomescu\
+*Safety in multi-assembly via paths appearing in all path covers of a DAG*\
+[slides]({{ site.baseurl }}{% link DSB2021/slides/slides-caceres.pdf %}) [video](https://youtu.be/Pn5Nw2bsLAg)\
+**14:40**\
+Break\
+**15:30**\
+Roland Wittler, Andreas Rempel and Marco Sohn\
+*SANS serif: alignment-free, whole-genome based phylogenetic reconstruction*\
+[slides]({{ site.baseurl }}{% link DSB2021/slides/slides-wittler.pdf %}) [video](https://youtu.be/qEgw5-6Qecs)\
+**15:55**\
+Lucas Robidou and Pierre Peterlongo\
+*On the fly detection of Bloom filter false positives and application indexing k-mers with their abundances*\
+[slides]({{ site.baseurl }}{% link DSB2021/slides/slides-robidou.pdf %}) [video](https://youtu.be/4vFX4GJG_tA)\
+**16:20**\
+Parsoa Khorsand, Luca Denti, Paola Bonizzoni, Rayan Chikhi and Fereydoun Hormozdiari\
+*Comparative genome analysis using sample-specific string detection in accurate long reads*\
+[slides]({{ site.baseurl }}{% link DSB2021/slides/slides-denti.pdf %}) [video](https://youtu.be/OuOYpkrWdgY)\
+**16:45**\
+Tizian Schulz, Roland Wittler and Jens Stoye\
+*Sequence-Based Pangenomic Core Detection*\
+[slides]({{ site.baseurl }}{% link DSB2021/slides/slides-schulz.pdf %}) [video](https://youtu.be/FD2yD67ixFk)\
+**17:10**\
+Andreas Rempel\
+*Developing a standard interface for sets of k-mer sets index structures*\
+[slides]({{ site.baseurl }}{% link DSB2021/slides/slides-rempel.pdf %}) [video](https://youtu.be/_mXm-xH4BWw)\
+**17:35**\
+Jamshed Khan and Robert Patro\
+*Cuttlefish: Fast, parallel, and low-memory compaction of de Bruijn graphs from large-scale genome collections*\
+[slides]({{ site.baseurl }}{% link DSB2021/slides/slides-khan.pdf %}) [video](https://youtu.be/VcjfMieaZWk)\
 ### February 12
 
-**13:00**
-Christina Boucher, Travis Gagie, Tomohiro I, Dominik Köppl, Ben Langmead, Giovanni Manzini, Gonzalo Navarro, Alejandro Pacheco and Massimiliano Rossi
-*PHONI: Streamed Matching Statistics with Multi-Genome References*
-**13:25**
-Karel Břinda, Simone Pignotti, Kamil Salikhov, Rayan Chikhi, Zamin Iqbal, Gregory Kucherov and Michael Baym
-*All microbes on a flashdrive*
-[slides]({{ site.baseurl }}{% link DSB2021/slides/slides-brinda.pptx %}) [video](https://youtu.be/iVhAOuYHH-M)
-**13:50**
-Yoshihiro Shibuya, Djamal Belazzougui and Gregory Kucherov
-*Succinct k-mer tables in practice*
-**14:15**
-Téo Lemane, Paul Medvedev, Rayan Chikhi and Pierre Peterlongo
-*kmtricks: Efficient construction of Bloom filters for large sequencing data collections*
-**14:40**
-Break
-**15:30**
-Till Hartmann, Elias Kuthe, Alicia Tüns, Alexander Schramm, Jens Zentgraf and Sven Rahmann
-*Alignment-free detection of copy number variants using strongly unique k-mers and fused lasso regularization*
-**15:55**
-Antonio Blanca, Robert S. Harris, David Koslicki and Paul Medvedev
-*The statistics of k-mers from a sequence undergoing a simple mutation process without spurious matches*
-**16:20**
-Travis Gagie
-*r-indexing Wheeler graphs*
-**16:45**
-Nicola Cotumaccio and Nicola Prezza
-*Indexing and compression: from Wheeler graphs to arbitrary graphs*
-**17:10**
-Travis Gagie, Garance Gourdel and Giovanni Manzini
-*XBWTing Readsets*
-**17:35**
-Christina Boucher, Ondrej Cvacho, Travis Gagie, Jan Holub, Giovanni Manzini, Gonzalo Navarro and Massimiliano Rossi
-*PFP Compressed Suffix Trees*
-**18:00**
+**13:00**\
+Christina Boucher, Travis Gagie, Tomohiro I, Dominik Köppl, Ben Langmead, Giovanni Manzini, Gonzalo Navarro, Alejandro Pacheco and Massimiliano Rossi\
+*PHONI: Streamed Matching Statistics with Multi-Genome References*\
+[slides]({{ site.baseurl }}{% link DSB2021/slides/slides-koeppl.pdf %}) [video](https://www.youtube.com/watch?v=0KH_MeUUAT0)\
+**13:25**\
+Karel Břinda, Simone Pignotti, Kamil Salikhov, Rayan Chikhi, Zamin Iqbal, Gregory Kucherov and Michael Baym\
+*All microbes on a flashdrive*\
+[slides]({{ site.baseurl }}{% link DSB2021/slides/slides-brinda.pptx %}) [video](https://youtu.be/iVhAOuYHH-M)\
+**13:50**\
+Yoshihiro Shibuya, Djamal Belazzougui and Gregory Kucherov\
+*Succinct k-mer tables in practice*\
+[slides]() [video](https://youtu.be/fv_3OajY-pk)\
+**14:15**\
+Téo Lemane, Paul Medvedev, Rayan Chikhi and Pierre Peterlongo\
+*kmtricks: Efficient construction of Bloom filters for large sequencing data collections*\
+[slides]({{ site.baseurl }}{% link DSB2021/slides/slides-peterlongo.pdf %}) [video](https://youtu.be/c91I3HhVhoQ)\
+**14:40**\
+Break\
+**15:30**\
+Till Hartmann, Elias Kuthe, Alicia Tüns, Alexander Schramm, Jens Zentgraf and Sven Rahmann\
+*Alignment-free detection of copy number variants using strongly unique k-mers and fused lasso regularization*\
+[slides]({{ site.baseurl }}{% link DSB2021/slides/slides-hartmann.pdf %}) [video](https://youtu.be/d8B_Cr0iQR4)\
+**15:55**\
+Antonio Blanca, Robert S. Harris, David Koslicki and Paul Medvedev\
+*The statistics of k-mers from a sequence undergoing a simple mutation process without spurious matches*\
+[slides]({{ site.baseurl }}{% link DSB2021/slides/slides-medvedev.pdf %}) [video]()\
+**16:20**\
+Travis Gagie\
+*r-indexing Wheeler graphs*\
+[slides]({{ site.baseurl }}{% link DSB2021/slides/slides-gagie.pdf %}) [video](https://youtu.be/h47iqXx_esg)\
+**16:45**\
+Nicola Cotumaccio and Nicola Prezza\
+*Indexing and compression: from Wheeler graphs to arbitrary graphs*\
+[slides]({{ site.baseurl }}{% link DSB2021/slides/slides-cotumaccio.pdf %}) [video](https://youtu.be/FKNCfRTYbX4)\
+**17:10**\
+Travis Gagie, Garance Gourdel and Giovanni Manzini\
+*XBWTing Readsets*\
+[slides]({{ site.baseurl }}{% link DSB2021/slides/slides-gourdel.pdf %}) [video](https://youtu.be/0EKzGIDO4WY)\
+**17:35**\
+Christina Boucher, Ondrej Cvacho, Travis Gagie, Jan Holub, Giovanni Manzini, Gonzalo Navarro and Massimiliano Rossi\
+*PFP Compressed Suffix Trees*\
+[slides]({{ site.baseurl }}{% link DSB2021/slides/slides-rossi.pdf %}) [video](https://youtu.be/dqG2Icir8JU)\
+**18:00**\
 Conclusion
+
 
 All times are **CET (UTC +1)**
 
