link to Paul's video

--- a/DSB2021/DSB2021.md
+++ b/DSB2021/DSB2021.md
@@ -101,7 +101,7 @@ Till Hartmann, Elias Kuthe, Alicia Tüns, Alexander Schramm, Jens Zentgraf and S
 **15:55**\
 Antonio Blanca, Robert S. Harris, David Koslicki and Paul Medvedev\
 *The statistics of k-mers from a sequence undergoing a simple mutation process without spurious matches*\
-[slides]({{ site.baseurl }}{% link DSB2021/slides/slides-medvedev.pdf %}) [video]()\
+[slides]({{ site.baseurl }}{% link DSB2021/slides/slides-medvedev.pdf %}) [video](https://youtu.be/JCcLvogeG-8)\
 **16:20**\
 Travis Gagie\
 *r-indexing Wheeler graphs*\
