more update for 2022, returned the old steering comittee and update contact us

--- a/DSB2022/DSB2022.md
+++ b/DSB2022/DSB2022.md
@@ -1,14 +1,14 @@
 ---
 layout: "post"
-title: "DSB 2021 Milano - Feb 11+12"
-description: Workshop Data Structures in Bioinformatics
+title: "DSB 2022 Düsseldorf - June 12+13"
+escription: Workshop Data Structures in Bioinformatics
 permalink: /DSB2022/
 image: img/marktplatz.jpg
 ---
 # How to participate
-In case you would like to participate with a presentation, please submit your abstract to EasyChair [here](https://easychair.org/conferences/?conf=dsb2022).
+* <u>Presenting:</u> Please submit your abstract as a 1 page PDF to [EasyChair](https://easychair.org/conferences/?conf=dsb2022).
 
-For attending only, submit an empty application to the same EasyChair link.
+* <u>Attending:</u> Please submit an **empty** application to the same EasyChair link. (Note: EasyChair will ask for 3 keywords, if attending only, just put any 3 keywords to finish the submission)
 
 
 <u>Deadline:</u> May 22nd.
@@ -27,7 +27,7 @@ For attending only, submit an empty application to the same EasyChair link.
 **All participants should have received an email with the instructions for joining the workshop.** If you have not received such an email,
 please contact Yuri Pirola (yuri.pirola@unimib.it) as soon as possible. -->
 
-### Submit an abstract
+## Submit an abstract
 
 As previously, there is no formal review, and the organizers reserve the right to select talks from the submissions to obtain a diverse and  interesting program.
 
@@ -36,14 +36,8 @@ As previously, there is no formal review, and the organizers reserve the right t
 Coming soon.
 
 ## Participants
-
+If you do not wish to have your name on the list, please email us.  
 [Find your name here]({{ site.baseurl }}{% link DSB2022/participants.md %})
-
-## Mailing List
-We use the dsb2021-groups@unimib.it mailing list for discussions and the diffusion of fresh informations.
-You will be added to the mailing list when you register.
-
-* To unsubscribe: send email to dsb2021-groups+unsubscribe@unimib.it
 
 
 # Practical
@@ -57,13 +51,27 @@ You will be added to the mailing list when you register.
 ![Haus der Universitaet](img/haus_der_uni_map.png)
 
 The workshop will take place in Düsseldorf, Germany at Haus der Universität building in the city center. [Here](https://www.hdu.hhu.de/en/service-page) are information on how to get there.
-## Supports
-This meeting is supported by
+
+#### Where to stay
+Haus der Universität is in the center of the city, if you stay in any of these areas (not an exhaustive list), you can get to the venue quite easily.
+* Main staion (Düsseldorf Hbf) would be not more than 10 to 15 minutes walk.
+* Old city (Altstadt)
+* Unterbilk
+* Bilk
+* Pempelfort
+* Flingern Nord
+
+If you stay around the University which is in the south of the city, it is not more than 10 to 15 minutes by metro to the venue. Please do not hesitate to email <a href="mailto:fawaz@hhu.de">Fawaz Dabbaghie</a> for information about the city.
+<!-- ## Supports
+This meeting is supported by -->
 
 <!-- *  [Università di Milano - Bicocca](https://www.unimib.it)
 *  [PANGAIA](https://www.pangenome.eu/) -->
 
 ## Organizers
-
-* Tobias Marschall
+* Fawaz Dabbaghie
+* Daniel Doerr
+* Sabine Gierling
 * Gunnar Klau
+* Tobias Marschall
+* Max Ried Jakub
