WIP talks are welcome as well

--- a/DSB2022/DSB2022.md
+++ b/DSB2022/DSB2022.md
@@ -7,7 +7,7 @@ image: img/marktplatz.jpg
 ---
 ## How to participate
 
-**Presenting:** Please submit your abstract as a 1 page PDF to [EasyChair](https://easychair.org/conferences/?conf=dsb2022).
+**Presenting:** Please submit your abstract as a 1 page PDF to [EasyChair](https://easychair.org/conferences/?conf=dsb2022). With the approval of the authors (OPT-IN), talks will be recorded and made available online after the conference. We also welcome presentations on work in progress.
 
 **Attending:** Please submit an **empty** application to the same EasyChair link. EasyChair will ask for 3 keywords, if attending only, just put any 3 keywords to finish the submission.
 
