--- a/DSB2022/DSB2022.md
+++ b/DSB2022/DSB2022.md
@@ -23,7 +23,55 @@ As previously, there is no formal review, and the organizers reserve the right t
 
 ## Program
 
-Coming soon.
+* Day 1: 13th of June 2022, 09:00 - 18:00
+
+|      **Topic**       |         **Speaker**        |    **Time**   |
+| :------------------- | :------------------------- | :------------ |
+| _Welcoming_          | Tobias/Gunnar              | 09:00 - 09:15 |
+| Pangenome            | Rayan Chikhi               | 09:20 - 09:45 |
+| Pangenome            | Andreas Rempel             | 09:45 - 10:10 |
+| Pangenome            | Nicola Cotumaccio          | 10:10 - 10:35 |
+| Application          | Ramin Shirali Hossein Zade | 10:35 - 11:00 |
+| Application          | Jasper van Bemmelen        | 11:00 - 11:25 |
+| Application          | Sandra Romain              | 11:25 - 11:50 |
+|                      |                            |               |
+| _Lunch break/coffee_ |                            |               |
+|                      |                            |               |
+| Pangenome            | Luca Parmigiani            | 13:20 - 13:45 |
+| Pangenome            | Manuel Cáceres             | 13:45 - 14:10 |
+| Pangenome            | Gianluca Della Vedova      | 14:10 - 14:35 |
+| Indexing             | Antoine Limasset           | 14:35 - 15:00 |
+| Indexing             | Lucas Robidou              | 15:00 - 15:25 |
+|                      |                            |               |
+| _Coffee break_       |                            | 15:25 - 15:50 |
+|                      |                            |               |
+| Indexing             | Roland Wittler             | 15:50 - 16:30 |
+| Indexing             | Yoshihiro Shibuya          | 16:30 - 16:55 |
+| Indexing             | Sebastian Schmidt          | 16:55 - 17:20 |
+| Indexing             | Victor Epain               | 17:30 - 17:55 |
+
+
+* Day 2: 14th of June 2022, 09:00 - 16:00
+
+|      **Topic**       |         **Speaker**        |    **Time**   |
+| :------------------- | :------------------------- | :------------ |
+| Founder              | Nicola Rizzo               | 09:00 - 09:25 |
+| Founder              | Konstantinn Bonnet         | 09:25 - 09:50 |
+| Founder              | Karel Brinda               | 09:50 - 10:15 |
+| Theory               | Barış Ekim                 | 10:15 - 10:40 |
+| Theory               | Pengfei Wang               | 10:40 - 11:05 |
+| Theory               | Diego Diaz                 | 11:10 - 11:35 |
+|                      |                            |               |
+| _Lunch break/coffee_ |                            |               |
+|                      |                            |               |
+| Indexing             | Jarno Alanko               | 13:00 - 13:25 |
+| Indexing             | Giulio Ermanno Pibiri      | 13:25 - 13:50 |
+| Indexing             | Jens Zentgraf              | 13:50 - 14:15 |
+| Flow                 | Fernando Hugo Cunha Dias   | 14:20 - 14:45 |
+| Flow                 | Frederick Oehl             | 14:45 - 15:10 |
+| Flow                 | Andreas Grigorjew          | 15:10 - 15:35 |
+|                      |                            |               |
+| _Closing remarks_    |                            |               |
 
 ## Participants
 
