Update program guide, and participants list

--- a/DSB2022/DSB2022.md
+++ b/DSB2022/DSB2022.md
@@ -7,15 +7,15 @@ image: img/marktplatz.jpg
 ---
 ## How to participate
 
-**Presenting:** Please submit your abstract as a 1 page PDF to [EasyChair](https://easychair.org/conferences/?conf=dsb2022). With the approval of the authors (OPT-IN), talks will be recorded and made available online after the conference. We also welcome presentations on work in progress.
+**Presenting:** Submissions are closed!
 
-**Attending:** Please submit an **empty** application to the same EasyChair link. EasyChair will ask for 3 keywords, if attending only, just put any 3 keywords to finish the submission.
+**Attending:** Applications are now closed. If you do not find yourself on the [list of participants]({{ site.baseurl }}{% link DSB2022/participants.md %}), please get in touch with us by [email](mailto:dsb2022@hhu.de).
 
-**Deadline:** May 22nd
+**Deadline:** the 22nd of May
 
-**Decision:** May 27th
+**Decision:** the 27th of May
 
-**Participation Confirmation Deadline:** May 30th
+**Participation Confirmation Deadline:** the 30th of May
 
 ## Submit an abstract
 
@@ -23,55 +23,47 @@ As previously, there is no formal review, and the organizers reserve the right t
 
 ## Program
 
-* Day 1: 13th of June 2022, 09:00 - 18:00
+* Day 1: the 13th of June 2022, 09:00 - 18:00
 
-|      **Topic**       |         **Speaker**        |    **Time**   |
-| :------------------- | :------------------------- | :------------ |
-| _Welcoming_          | Tobias/Gunnar              | 09:00 - 09:15 |
-| Pangenome            | Rayan Chikhi               | 09:20 - 09:45 |
-| Pangenome            | Andreas Rempel             | 09:45 - 10:10 |
-| Pangenome            | Nicola Cotumaccio          | 10:10 - 10:35 |
-| Application          | Ramin Shirali Hossein Zade | 10:35 - 11:00 |
-| Application          | Jasper van Bemmelen        | 11:00 - 11:25 |
-| Application          | Sandra Romain              | 11:25 - 11:50 |
-|                      |                            |               |
-| _Lunch break/coffee_ |                            |               |
-|                      |                            |               |
-| Pangenome            | Luca Parmigiani            | 13:20 - 13:45 |
-| Pangenome            | Manuel Cáceres             | 13:45 - 14:10 |
-| Pangenome            | Gianluca Della Vedova      | 14:10 - 14:35 |
-| Indexing             | Antoine Limasset           | 14:35 - 15:00 |
-| Indexing             | Lucas Robidou              | 15:00 - 15:25 |
-|                      |                            |               |
-| _Coffee break_       |                            | 15:25 - 15:50 |
-|                      |                            |               |
-| Indexing             | Roland Wittler             | 15:50 - 16:30 |
-| Indexing             | Yoshihiro Shibuya          | 16:30 - 16:55 |
-| Indexing             | Sebastian Schmidt          | 16:55 - 17:20 |
-| Indexing             | Victor Epain               | 17:30 - 17:55 |
+| **Speaker**                  | **Title**                                                                                                      | **Time**      |
+|------------------------------|----------------------------------------------------------------------------------------------------------------|---------------|
+| Tobias Marschall/Gunnar Klau | Welcoming/opening talk                                                                                         | 09:00 - 09:15 |
+| Rayan Chikhi                 | Minimizer Space de Bruijn Graphs for Pangenomics                                                               | 09:20 - 09:45 |
+| Andreas Rempel               | Developing a standard interface for k-mer-based index structures                                               | 09:45 - 10:10 |
+| Nicola Cotumaccio            | Graph pattern matching: what if labels can be strings?                                                         | 10:10 - 10:35 |
+| Ramin Shirali Hossein Zade   | HAT: Haplotype Assembly Tool using short and long reads                                                        | 10:35 - 11:00 |
+| Jasper van Bemmelen          | An optimized amplicon sequencing approach to estimating SARS-CoV-2 variant abundances in wastewater            | 11:00 - 11:25 |
+| Sandra Romain                | SVJedi-graph: using a variation graph to improve structural variant genotyping with long reads                 | 11:25 - 11:50 |
+| _Lunch Break_                |                                                                                                                | 11:50 - 13:20 |
+| Luca Parmigiani              | Open and closed pangenomes with k-mer counting                                                                 | 13:20 - 13:45 |
+| Manuel Cáceres               | Chaining for Accurate Alignment of Erroneous Long Reads to Acyclic Variation Graphs                            | 13:45 - 14:10 |
+| Jorge Avila Cartes           | Accurate classification of SARS-CoV-2 clades using Frequency Chaos Game Representation                         | 14:10 - 14:35 |
+| Antoine Limasset             | Toward optimal fingerprint indexing for large scale genomics                                                   | 14:35 - 15:00 |
+| Lucas Robidou                | fimpera: low memory counting Approximate Membership Query                                                      | 15:00 - 15:25 |
+| _Coffee Break_               |                                                                                                                | 15:25 - 15:50 |
+| Roland Wittler               | Bit-encoding of canonical k-mers                                                                               | 15:50 - 16:30 |
+| Yoshihiro Shibuya            | Space-efficient sets differences with applications to Jaccard estimation                                       | 16:30 - 16:55 |
+| Sebastian Schmidt            | Minimum plain text representation of kmer sets                                                                 | 16:55 - 17:20 |
+| Victor Epain                 | The reverse complement symmetry advantage of DNA fragments relationships for their storage in a directed graph | 17:30 - 17:55 |
 
+* Day 2: the 14th of June 2022, 09:00 - 16:00
 
-* Day 2: 14th of June 2022, 09:00 - 16:00
-
-|      **Topic**       |         **Speaker**        |    **Time**   |
-| :------------------- | :------------------------- | :------------ |
-| Founder              | Nicola Rizzo               | 09:00 - 09:25 |
-| Founder              | Konstantinn Bonnet         | 09:25 - 09:50 |
-| Founder              | Karel Brinda               | 09:50 - 10:15 |
-| Theory               | Barış Ekim                 | 10:15 - 10:40 |
-| Theory               | Pengfei Wang               | 10:40 - 11:05 |
-| Theory               | Diego Diaz                 | 11:10 - 11:35 |
-|                      |                            |               |
-| _Lunch break/coffee_ |                            |               |
-|                      |                            |               |
-| Indexing             | Jarno Alanko               | 13:00 - 13:25 |
-| Indexing             | Giulio Ermanno Pibiri      | 13:25 - 13:50 |
-| Indexing             | Jens Zentgraf              | 13:50 - 14:15 |
-| Flow                 | Fernando Hugo Cunha Dias   | 14:20 - 14:45 |
-| Flow                 | Frederick Oehl             | 14:45 - 15:10 |
-| Flow                 | Andreas Grigorjew          | 15:10 - 15:35 |
-|                      |                            |               |
-| _Closing remarks_    |                            |               |
+| **Speaker**                  | **Title**                                                                                                      | **Time**      |
+|------------------------------|----------------------------------------------------------------------------------------------------------------|---------------|
+| Nicola Rizzo                 | Suffix Tree Maneuvers for the Construction of Elastic Founder Graphs                                           | 09:00 - 09:25 |
+| Konstantinn Bonnet           | Constructing founder sets under allelic and non-allelic homologous recombination                               | 09:25 - 09:50 |
+| Karel Brinda                 | The tree of life enables efficient and robust compression and search of microbes                               | 09:50 - 10:15 |
+| Barış Ekim                   | Approximate pattern counting in de Bruijn graphs is #W[1]-hard                                                 | 10:15 - 10:40 |
+| Pengfei Wang                 | Autocorrelations of strings: an upper bound.                                                                   | 10:40 - 11:05 |
+| Diego Diaz                   | Efficient computation of MEMs in string collections using dictionary-based compression                         | 11:10 - 11:35 |
+| _Lunch_                      |                                                                                                                | 11:35 - 12:55 |
+| Jarno Alanko                 | Succinct k-mer Set Representations Using Subset Rank Queries on the Spectral Burrows-Wheeler Transform (SBWT)  | 13:00 - 13:25 |
+| Giulio Ermanno Pibiri        | PTHash: Revisiting FCH Minimal Perfect Hashing                                                                 | 13:25 - 13:50 |
+| Jens Zentgraf                | Fast gapped k-mer counting with subdivided multi-way bucketed Cuckoo hash tables                               | 13:50 - 14:15 |
+| Fernando Hugo Cunha Dias     | Fast, Flexible, and Exact Minimum Flow Decompositions via Integer Linear Programming                           | 14:20 - 14:45 |
+| Frederick Oehl               | Would like to give a talk on his Master project, if at all possible.                                           | 14:45 - 15:10 |
+| Andreas Grigorjew            | Width Helps and Hinders Splitting Flows                                                                        | 15:10 - 15:35 |
+| _Closing Remarks_            |                                                                                                                | 15:35 - 16:00 |
 
 ## Participants
 
@@ -82,8 +74,8 @@ If you do not wish to have your name on the list, please contact us at [dsb2022@
 
 ### When
 
-* Monday, June 13, 09:00 to 18:00: first workshop day
-* Tuesday, June 14, 09:00 to 16:00: second workshop day
+* Monday, the 13th of June, 09:00 to 18:00: first workshop day
+* Tuesday, the 14th of June, 09:00 to 16:00: second workshop day
 
 ### Where
 
